tests/errors/duration-out-of-order/main.pa
def backwards = 20s2m
